Fix OCP: DatabaseSqlProviderFactory open to extension without modification
- Annotate H2/MySQL/PostgreSQL providers with @Component + @Order(1/2/3)
- Add Spring constructor to DatabaseSqlProviderFactory accepting
  List<DatabaseSqlProvider> — all provider beans are injected automatically
  in @Order priority; adding a new database now requires only a new @Component,
  no changes to the factory
- Keep no-arg constructor for direct use outside Spring (tests, etc.)
- Import providers explicitly in ShardingAutoConfiguration so they are always
  registered as beans regardless of application component-scan coverage
- Update ShardingAutoConfiguration.databaseSqlProviderFactory() to inject
  the provider list rather than calling the no-arg constructor

Tests: add 3 OCP-focused cases to DatabaseSqlProviderFactoryTest
(custom provider registration, injection-constructor ordering, no-arg defaults).
All 123 tests green.

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>